--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -5,6 +5,7 @@
     <item type="id" name="tag_listholder" />
     <item type="id" name="tag_imageview" />
     <item type="id" name="tag_my_express" />
+    <item type="id" name="tag_receiving_order" />
     <item type="id" name="tag_area_price_set" />
     <item type="id" name="tag_spinner" />
 </resources>
