--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -49,7 +49,7 @@
         <item>camera</item>
         <item>scan</item>
         <item>search</item>
-        <item>search</item>
+        <item>myexpress</item>
         <item>search</item>
         <item>search</item>
         <item>search</item>
@@ -63,7 +63,7 @@
         <item>camera</item>
         <item>scan</item>
         <item>search</item>
-        <item>search</item>
+        <item>myexpress</item>
         <item>search</item>
         <item>search</item>
         <item>search</item>
