--- a/app/src/main/res/layout/activity_place_order_show.xml
+++ b/app/src/main/res/layout/activity_place_order_show.xml
@@ -615,6 +615,7 @@
                 android:layout_marginBottom="5dp">
 
                 <Button
+                    android:id="@+id/btn_place_order_show_cancel"
                     android:layout_width="100dp"
                     android:layout_height="36dp"
                     android:text="取消发布"
