--- a/app/src/main/res/layout/activity_area_price_set.xml
+++ b/app/src/main/res/layout/activity_area_price_set.xml
@@ -92,9 +92,13 @@
 
             <Button
                 android:id="@+id/btn_area_price_save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="36dp"
                 android:text="@string/str_area_price_save"
+                android:textSize="16sp"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/color_view_text"
+                android:background="@drawable/btn_login_new"
                 android:layout_gravity="center"/>
 
         </LinearLayout>
