--- a/app/src/main/res/layout/layout_payment_info_item.xml
+++ b/app/src/main/res/layout/layout_payment_info_item.xml
@@ -21,8 +21,16 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textColor="@color/black"
-            android:text="100元(赠品)"
-            android:layout_marginLeft="10dp"
+            android:text="100元"
+            android:layout_marginLeft="10dp"/>
+
+        <TextView
+            android:id="@+id/tv_payment_info_item_gift"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:text="(赠品)"
+            android:textColor="@color/color_dark_grey"
             android:layout_marginRight="10dp"/>
 
     </LinearLayout>
