--- a/app/src/main/res/values/string_array.xml
+++ b/app/src/main/res/values/string_array.xml
@@ -36,8 +36,8 @@
         <item>接单</item>
         <item>支付宝测试</item>
         <item>充值</item>
-        <item></item>
-        <item></item>
+        <item>商城种类</item>
+        <item>充值记录</item>
         <item></item>
         <item></item>
         <item></item>
@@ -67,8 +67,8 @@
         <item>search</item>
         <item>search</item>
         <item>search</item>
-        <item>other</item>
-        <item>other</item>
+        <item>search</item>
+        <item>search</item>
         <item>other</item>
         <item>other</item>
         <item>other</item>
