--- a/app/src/main/res/layout/activity_payment_express.xml
+++ b/app/src/main/res/layout/activity_payment_express.xml
@@ -38,21 +38,124 @@
         android:background="#d3d4d8" />
 
     <LinearLayout
+        android:id="@+id/ll_payment_function"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/search_line_1"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="拍照"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#d3d4d8" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="扫码"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#d3d4d8" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/ll_pay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:text="普通账户："
+                android:layout_marginLeft="10dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:text="500"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:text="信用账户："
+                android:layout_marginLeft="10dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:text="500"/>
+
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="请选择充值方式："
-            android:textSize="16sp"
-            android:textColor="@color/black"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"/>
+            android:text="请选择充值方式："
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <View
             android:layout_width="match_parent"
@@ -60,37 +163,37 @@
             android:background="#d3d4d8" />
 
         <RelativeLayout
+            android:id="@+id/rl_alipay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:id="@+id/rl_alipay">
+            android:paddingTop="10dp">
 
             <ImageView
                 android:id="@+id/iv_payment_alipay"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@mipmap/alipay"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginLeft="10dp"
+                android:background="@mipmap/alipay" />
 
             <TextView
-                android:layout_toRightOf="@id/iv_payment_alipay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:text="支付宝安全支付"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/iv_payment_alipay"
+                android:text="支付宝安全支付"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
             <ImageView
                 android:layout_width="10dp"
                 android:layout_height="20dp"
-                android:background="@mipmap/arrow"
+                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:layout_alignParentRight="true"/>
+                android:background="@mipmap/arrow" />
 
         </RelativeLayout>
 
@@ -100,37 +203,37 @@
             android:background="#d3d4d8" />
 
         <RelativeLayout
+            android:id="@+id/rl_wechat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:id="@+id/rl_wechat">
+            android:paddingTop="10dp">
 
             <ImageView
                 android:id="@+id/iv_payment_wechat"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@mipmap/wechat"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginLeft="10dp"
+                android:background="@mipmap/wechat" />
 
             <TextView
-                android:layout_toRightOf="@id/iv_payment_wechat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:text="微信支付"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/iv_payment_wechat"
+                android:text="微信支付"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
             <ImageView
                 android:layout_width="10dp"
                 android:layout_height="20dp"
-                android:background="@mipmap/arrow"
+                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:layout_alignParentRight="true"/>
+                android:background="@mipmap/arrow" />
 
         </RelativeLayout>
 
@@ -139,25 +242,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@id/search_line_1"
         android:layout_above="@id/ll_pay"
-        android:background="#E0E0E0">
+        android:layout_below="@id/ll_payment_function"
+        android:background="#E0E0E0"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="请选择充值金额："
-            android:textSize="16sp"
-            android:textColor="@color/black"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:text="请选择充值金额："
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_payment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp" />
 
     </LinearLayout>
 
